--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,9 @@
 {
-  "name": "Chrome React Extension with Clerk",
-  "description": "Test Chrome extensions with Clerk",
+  "name": "Clerk Extension v3",
+  "description": "Clerk Extension v3",
   "version": "0.1",
   "manifest_version": 3,
+  "permissions": ["tabs", "scripting", "activeTab"],
   "action": {
     "default_popup": "index.html",
     "default_title": "Open the popup"
@@ -11,5 +12,11 @@
     "16": "logo192.png",
     "48": "logo192.png",
     "128": "logo192.png"
-  }
+  },
+  "host_permissions": [
+    "http://gentle-guinea-22.clerk.accounts.dev/",
+    "https://gentle-guinea-22.clerk.accounts.dev/",
+    "http://localhost:3000/",
+    "https://localhost:3000/"
+  ]
 }
