--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "clerk-chrome-extension-starter",
+  "name": "newsprint-extension",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@clerk/chrome-extension": "^0.2.0-staging.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
@@ -13,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -23,6 +23,7 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.2",
     "react-app-rewired": "^2.2.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5"
