--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/uuid": "^9.0.2",
+    "env-cmd": "^10.1.0",
     "react-app-rewired": "^2.2.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "INLINE_RUNTIME_CHUNK=false react-scripts build",
+    "build": "env-cmd -f .env.development react-scripts build",
+    "build:prod": "env-cmd -f .env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
