--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,5 @@
 REACT_APP_APP_URL=http://localhost:3000
 REACT_APP_API_ENDPOINT=/api
 REACT_APP_IS_DEVELOPMENT=true
+REACT_APP_POSTHOG_KEY="phc_T8vKtxIt7TivFsipb2hcw21Z4nIXdqSPGjl2vey5cPt"
+NODE_ENV="development"
