--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@mui/material": "^5.14.0",
     "@types/chrome": "^0.0.240",
     "axios": "^1.4.0",
+    "dompurify": "^3.0.5",
+    "marked": "^7.0.2",
     "posthog-js": "^1.75.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
